styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
}

:root {
  --bg: rgb(19, 18, 23);
  --primary: rgb(177, 122, 204);
  --secondary: rgb(208, 244, 141);
  --text: rgba(255, 255, 255, 0.8);

  --radius: 4px;
}

html,
body {
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

body {
  align-items: center;
  background-color: var(--bg);
  color: var(--text);
  display: flex;
  flex-direction: column;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  justify-content: center;
  padding: 1rem;
}

h1 {
  color: var(--primary);
  margin: 0 0 2rem;
}

input[type="radio"] {
  margin: 0 0.5rem 0 0;
}

input[type="radio"] + label {
  display: inline-block;
  vertical-align: middle;
}

.Form__inputWrapper { position: relative; }

input[type="text"],
input[type="number"] {
  background-color: rgba(255, 255, 255, 0.2);
  border: 1px solid var(--text);
  border-radius: var(--radius);
  color: var(--text);
  display: block;
  font: inherit;
  outline: 0;
  padding: 1rem;
  width: 100%;
}

::placeholder {
  color: var(--text);
  opacity: 0.25;
}

button {
  background-color: var(--primary);
  border: 1px solid var(--primary);
  border-radius: var(--radius);
  color: var(--text);
  display: block;
  font: inherit;
  outline: 0;
  padding: 1rem;
  position: relative;
}

button::before,
.Form__inputWrapper::before {
  border: 2px solid var(--secondary);
  border-radius: calc(var(--radius) * 2);
  bottom: -5px;
  content: '';
  left: -5px;
  opacity: 0;
  position: absolute;
  right: -5px;
  transition: opacity ease 0.2s;
  top: -5px;
}

button:focus::before,
.Form__inputWrapper:focus-within::before { opacity: 1; }

.Form__fieldset {
  border: 1px solid var(--primary);
  border-radius: var(--radius);
  padding: 1rem 1.5rem 1.5rem;
}

.Form__fieldset + .Form__fieldset {
  margin: 2rem 0 0;
}

.Form__legend {
  color: var(--primary);
}

.Form__row {
  display: flex;
  flex-wrap: wrap;
}

.Form__row + .Form__row {
  margin: 1rem 0 0;
}

.Form__field {
  flex: 1 0 auto;
  width: 100%;
}

.Form__field--sm-2 {
  flex: 1;
  width: auto;
}

.Form__field + .Form__field {
  margin: 2rem 0 0;
}

.Form__field--sm-2 + .Form__field--sm-2 {
  margin: 0 0 0 2rem;
}

.Form__label {
  display: block;
  margin: 0 0 0.75rem;
}

.Form__btn {
  margin: 1.5rem auto 1rem;
}

.Output {
  display: flex;
  font-size: 1.5rem;
  justify-content: space-around;
  width: 100%;
}

.Output__line {
  text-align: center;
}

.Output__total {
  color: var(--primary);
  display: block;
  font-size: 2rem;
}

.Output__total--carbs::after {
  content: 'g';
  color: var(--text);
  display: inline-block;
  font-size: 1.5rem;
  margin-left: 0.25ch;
}

@media (min-width: 767px) {
  .Output__line {
    text-align: left;
  }

  .Output__total {
    display: inline;
  }
}

